--- a/style.css
+++ b/style.css
@@ -40,16 +40,21 @@ h4 {
     width: 50%;
 }
   
-  /* 
-    [3]
-    Add a margin-top to inner-video 
-    Fixed pixel height
-    And percentage width
-  */
+  
 .inner-video {
     box-shadow: 10px 10px 50px rgba(0, 255, 255, 0.35);
     margin-top: 10px;
     margin-bottom: 10px;
     height: 300px;
     width: 300px;
+}
+
+
+.lyrics-container {
+    background: rgba(0,0,0,.5);
+    border-radius: 5px;
+    line-height: 35px;
+    height: 100%;
+    width: 50%;
+    border-color: white;
 }
