--- a/style.css
+++ b/style.css
@@ -56,5 +56,8 @@ h4 {
     line-height: 35px;
     height: 100%;
     width: 50%;
-    border-color: white;
+    border: 1px solid white;
+    padding: 15px;
+    overflow-y: scroll;
+    
 }
